[metadata]
name = scb_tools
version = 0.0.0
url = https://github.com/tsvenson/scb_tools
author = Thomas Svenson
author_email = thomas@tsvenson.com
license = MIT
description = Tools for creating and managing imports from the SCB open API using scb_import.
long_description = file: README.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Database
    Topic :: Internet
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = scb_tools
install_requires =
    prompt_toolkit
